--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,3 +17,18 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/frontend"
+    schedule:
+      interval: "weekly"
+    groups:
+      npm:
+        patterns:
+          - '*'
+  - package-ecosystem: "docker"
+    directory: "/frontend"
+    schedule:
+      interval: "weekly"
+    groups:
+      docker:
+        patterns:
