--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -55,16 +55,67 @@ jobs:
           version: "latest"
           install-go: false
 
-  tests:
+  test-containers:
     permissions:
       contents: read
+      id-token: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - id: auth
+        name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          token_format: access_token
+          workload_identity_provider: projects/1007056531311/locations/global/workloadIdentityPools/ci-nada-prod/providers/ci-nada-prod
+          service_account: ci-nada-images@nada-prod-6977.iam.gserviceaccount.com
+
+      - uses: docker/login-action@v3
+        name: Login to Google Artifact Registry
+        with:
+          registry: europe-north1-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
+
+      - name: Check if images exist
+        id: check-images
+        run: |
+          set +e
+          make check-images
+          echo "exit_code=$?" >> $GITHUB_OUTPUT
+        continue-on-error: true
+
+      - name: Build and push all images
+        if: ${{ steps.check-images.outputs.exit_code != 0 }}
+        run: make build-push-all
+  tests:
+    permissions:
+      contents: read
+      id-token: write
+    runs-on: ubuntu-latest
+    needs:
+    - test-containers
+    steps:
+      - uses: actions/checkout@v4
+      - id: auth
+        name: Authenticate with Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          token_format: access_token
+          workload_identity_provider: projects/1007056531311/locations/global/workloadIdentityPools/ci-nada-prod/providers/ci-nada-prod
+          service_account: ci-nada-images@nada-prod-6977.iam.gserviceaccount.com
+
+      - uses: docker/login-action@v3
+        name: Login to Google Artifact Registry
+        with:
+          registry: europe-north1-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.auth.outputs.access_token }}
+      - run: make pull-deps pull-metabase-patched
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - run: CGO_ENABLED=1 CXX=clang++ CC=clang CGO_CXXFLAGS=-Wno-everything CGO_LDFLAGS=-Wno-everything go test -race -coverprofile=coverage.txt -covermode=atomic -v ./...
+      - run: make test
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.5.0
         with:
@@ -79,7 +130,7 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - run: make linux-build
+      - run: make release
       - uses: actions/upload-artifact@v4
         with:
           name: nada-backend
@@ -109,6 +160,7 @@ jobs:
           identity_provider: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
           project_id: ${{ inputs.project_id }}
           image_suffix: backend
+          dockerfile: ./resources/images/nada-backend/Dockerfile
 
   deploy-dev:
     name: Deploy to dev-gcp
@@ -122,19 +174,19 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-gcp
-          RESOURCE: .nais/dev/nada-backend-config.yaml,.nais/dev/gcp.yaml
+          RESOURCE: .nais/dev/nada-backend/nada-backend-config.yaml,.nais/dev/nada-backend/gcp.yaml
           VAR: image=${{ needs.push.outputs.image }}
 
   deploy-prod:
     name: Deploy to prod-gcp
     runs-on: ubuntu-20.04
-    needs: [push]
+    needs: [push,deploy-dev]
     if: github.actor != 'dependabot[bot]' && ${{ inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev' }}
     steps:
       - uses: actions/checkout@v4
-      #- name: Deploy to prod-gcp
-      #  uses: nais/deploy/actions/deploy@v2
-      #  env:
-      #    CLUSTER: prod-gcp
-      #    RESOURCE: .nais/prod/nada-backend-config.yaml,.nais/prod/gcp.yaml
-      #    VAR: image=${{ needs.push.outputs.image }}
+      - name: Deploy to prod-gcp
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          CLUSTER: prod-gcp
+          RESOURCE: .nais/prod/nada-backend/nada-backend-config.yaml,.nais/prod/nada-backend/gcp.yaml
+          VAR: image=${{ needs.push.outputs.image }}
