--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -11,7 +11,9 @@ on:
         description: "NAIS parameter"
         required: true
         type: string
-
+env:
+  CI: true
+  
 permissions:
   contents: write
   packages: write
