--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -42,7 +42,7 @@ jobs:
     name: Deploy to dev-gcp
     runs-on: ubuntu-latest
     needs: [build-and-push]
-    if: github.actor != 'dependabot[bot]' && ${{ inputs.deploy_env == 'dev-only' || inputs.deploy_env == 'prod-and-dev' }}
+    if: ${{ github.actor != 'dependabot[bot]' && (inputs.deploy_env == 'dev-only' || inputs.deploy_env == 'prod-and-dev') }}
     env:
       IMAGE: ${{ needs.build.outputs.image }}
     steps:
@@ -58,13 +58,12 @@ jobs:
     name: Deploy to prod-gcp
     runs-on: ubuntu-latest
     needs: [build-and-push]
-    if: github.actor != 'dependabot[bot]' && ${{ inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev' }}
+    if: ${{ github.actor != 'dependabot[bot] && ('inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev') }}
     env:
       IMAGE: ${{ needs.build.outputs.image }}
     steps:
       - uses: actions/checkout@v4
       - name: Deploy to prod
-        if: github.ref == 'refs/heads/main'
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: prod-gcp
