--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -58,7 +58,7 @@ jobs:
     name: Deploy to prod-gcp
     runs-on: ubuntu-latest
     needs: [build-and-push]
-    if: ${{ github.actor != 'dependabot[bot] && ('inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev') }}
+    if: ${{ github.actor != 'dependabot[bot]' && (inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev') }}
     env:
       IMAGE: ${{ needs.build.outputs.image }}
     steps:
