--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Set environment based on event
         id: set-environment
         run: |
-          if [ "${{ github.event_name }}" == "push" ]; then
+          if [ "${{ github.event_name }}" == "push" ] && ["${{ github.ref }}" == "refs/heads/main"]; then
             echo "deploy_env=prod-and-dev" >> $GITHUB_OUTPUT
           elif [ "${{ github.event_name }}" == "pull_request" ]; then
             echo "deploy_env=dev-only" >> $GITHUB_OUTPUT
