--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -70,9 +70,9 @@ jobs:
           else
             echo "build_module=none"  >> $GITHUB_OUTPUT
           fi
-          if [ "${{ github.event.inputs.module }}" == 'metabase-only' ]; then
+          if [ "${{ github.event.inputs.module }}" == 'metabase-only' ] || [ "${{ github.event.inputs.module }}" == 'fullstack' ]; then
               echo "build_metabase=true" >> $GITHUB_OUTPUT
-          elif [ "${{ steps.check-change.outputs.metabase }}" == 'true' ]; then
+          elif [ "${{ github.event_name }}" != "workflow_dispatch" ] && [ "${{ steps.check-change.outputs.metabase }}" == 'true' ]; then
               echo "build_metabase=true" >> $GITHUB_OUTPUT
           else
               echo "build_metabase=false" >> $GITHUB_OUTPUT
