--- a/resources/images/nada-backend/Dockerfile-mocks
+++ b/resources/images/nada-backend/Dockerfile-mocks
@@ -17,6 +17,7 @@ COPY ../../.. .
 RUN mkdir -p /app/bin
 RUN go build -o /app/bin/nc ./cmd/nc/main.go
 RUN go build -o /app/bin/tk ./cmd/tk/main.go
+RUN go build -o /app/bin/sa ./cmd/sa/main.go
 
 FROM debian:bookworm-slim
 WORKDIR /app
