feat(stories): delete empty stories after N days

--- a/.nais/prod/nada-backend/nada-backend-config.yaml
+++ b/.nais/prod/nada-backend/nada-backend-config.yaml
@@ -92,5 +92,6 @@ data:
     amplitude_api_key: # Loaded from env var NADA_AMPLITUDE_API_KEY
     cache_duration_seconds: 7200
     team_projects_update_delay_seconds: 120
+    keep_empty_stories_for_days: 7
     debug: false
     log_level: info
