--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -95,5 +95,6 @@ amplitude_api_key: fake_key
 log_level: info
 cache_duration_seconds: 60
 team_projects_update_delay_seconds: 120
+keep_empty_stories_for_days: 7
 story_create_ignore_missing_team: false
 debug: false
