--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -92,6 +92,7 @@ data:
     amplitude_api_key: # Loaded from env var NADA_AMPLITUDE_API_KEY
     cache_duration_seconds: 7200
     team_projects_update_delay_seconds: 120
+    keep_empty_stories_for_days: 7
     debug: false
     story_create_ignore_missing_team: true
     log_level: info
