--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -91,5 +91,6 @@ login_page: http://localhost:3000/
 amplitude_api_key: # Loaded from env var NADA_AMPLITUDE_API_KEY
 cache_duration_seconds: 7200
 team_projects_update_delay_seconds: 10
+keep_empty_stories_for_days: 7
 debug: false
 log_level: debug
