--- a/config-local.yaml
+++ b/config-local.yaml
@@ -47,7 +47,7 @@ postgres:
 teams_catalogue:
   api_url: http://localhost:8087
 treatment_catalogue:
-  api_url: https://polly.intern.dev.nav.no/process
+  api_url: https://behandlingskatalog-backend.intern.dev.nav.no/process
   purpose_url: https://behandlingskatalog.intern.dev.nav.no/process/purpose
 google_groups:
   impersonation_subject: johnny.horvi@nav.no
