--- a/config-local.yaml
+++ b/config-local.yaml
@@ -91,6 +91,12 @@ api:
 service_account:
   endpoint: http://localhost:8088
   disable_auth: true
+workstation:
+  project: knada-dev
+  location: europe-north1
+  clusterID: knada
+  endpoint: http://localhost:8090
+  disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: test-gcp
 cache_duration_seconds: 60
