--- a/resources/images/nada-backend/Dockerfile-mocks
+++ b/resources/images/nada-backend/Dockerfile-mocks
@@ -18,6 +18,7 @@ RUN mkdir -p /app/bin
 RUN go build -o /app/bin/nc ./cmd/nc/main.go
 RUN go build -o /app/bin/tk ./cmd/tk/main.go
 RUN go build -o /app/bin/sa ./cmd/sa/main.go
+RUN go build -o /app/bin/ws ./cmd/ws/main.go
 
 FROM debian:bookworm-slim
 WORKDIR /app
