--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -86,6 +86,12 @@ api:
 service_account:
     endpoint: http://localhost:8086
     disable_auth: true
+workstation:
+  project: knada-dev
+  location: europe-north1
+  clusterID: knada
+  endpoint: http://localhost:8090
+  disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
