--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -109,7 +109,7 @@ jobs:
           elif [ ${{ github.event_name }} == workflow_dispatch ]; then
             if [ ${{ github.event.inputs.behavior }} == 'deploy-dev' ]; then
               echo "deploy_env=dev-only" >> $GITHUB_OUTPUT
-            if [ ${{ github.event.inputs.behavior }} == 'deploy-only' ]; then
+            elif [ ${{ github.event.inputs.behavior }} == 'deploy-only' ]; then
               echo "deploy_env=dev-only" >> $GITHUB_OUTPUT
               echo "notest=true" >> $GITHUB_OUTPUT
             elif [ ${{ github.event.inputs.behavior }} == 'test-only' ]; then
