--- a/.github/workflows/build-and-deploy-backend.yml
+++ b/.github/workflows/build-and-deploy-backend.yml
@@ -101,9 +101,9 @@ jobs:
     runs-on: ubuntu-latest
     needs:
     - test-containers
-    if: ${{ inputs.notest != 'true' }}
     steps:
-      - uses: actions/checkout@v4
+      - id: checkout
+        uses: actions/checkout@v4
       - id: auth
         name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v2
@@ -111,19 +111,25 @@ jobs:
           token_format: access_token
           workload_identity_provider: projects/1007056531311/locations/global/workloadIdentityPools/ci-nada-prod/providers/ci-nada-prod
           service_account: ci-nada-images@nada-prod-6977.iam.gserviceaccount.com
-
       - uses: docker/login-action@v3
         name: Login to Google Artifact Registry
         with:
           registry: europe-north1-docker.pkg.dev
           username: oauth2accesstoken
           password: ${{ steps.auth.outputs.access_token }}
-      - run: make pull-deps pull-metabase-patched
-      - uses: actions/setup-go@v5
+      - id: check-images
+        if: ${{ inputs.notest != 'true' }}
+        run: make pull-deps pull-metabase-patched
+      - id: setup-go
+        if: ${{ inputs.notest != 'true' }}
+        uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
-      - run: make test
+      - id: run-tests
+        if: ${{ inputs.notest != 'true' }}
+        run: make test
       - name: Upload coverage reports to Codecov
+        if: ${{ inputs.notest != 'true' }}
         uses: codecov/codecov-action@v4.5.0
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
