update workflow, only compare changes with the same branch

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -57,6 +57,7 @@ jobs:
               - '.nais/dev/metabase/**'
               - '.nais/prod/metabase/**'
               - '.nais/vars.yaml'
+          ref: ${{ github.ref_name }}
 
       - name: Set module to build and deploy
         id: set-module
