--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -87,11 +87,12 @@ service_account:
     endpoint: http://localhost:8086
     disable_auth: true
 workstation:
-  project: knada-dev
-  location: europe-north1
-  clusterID: knada
-  endpoint: http://localhost:8090
-  disable_auth: true
+    workstations_project: knada-dev
+    service_accounts_project: nada-dev
+    location: europe-north1
+    clusterID: knada
+    endpoint: http://localhost:8090
+    disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
