--- a/resources/images/nada-backend/Dockerfile-mocks
+++ b/resources/images/nada-backend/Dockerfile-mocks
@@ -19,6 +19,7 @@ RUN go build -o /app/bin/nc ./cmd/nc/main.go
 RUN go build -o /app/bin/tk ./cmd/tk/main.go
 RUN go build -o /app/bin/sa ./cmd/sa/main.go
 RUN go build -o /app/bin/ws ./cmd/ws/main.go
+RUN go build -o /app/bin/swp ./cmd/swp/main.go
 
 FROM debian:bookworm-slim
 WORKDIR /app
