--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -157,6 +157,20 @@ services:
       - -port
       - "8080"
 
+  swp:
+    image: europe-north1-docker.pkg.dev/nada-prod-6977/nada-north/nada-backend-mocks:${MOCKS_VERSION}
+    container_name: swp
+    platform: linux/amd64
+    hostname: swp
+    ports:
+      - "8091:8080"
+    networks:
+      - metanet1
+    command:
+      - /app/bin/swp
+      - -port
+      - "8080"
+
   pubsub:
     image: google/cloud-sdk:emulators
     restart: always
