--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -171,6 +171,20 @@ services:
       - -port
       - "8080"
 
+  crm:
+    image: europe-north1-docker.pkg.dev/nada-prod-6977/nada-north/nada-backend-mocks:${MOCKS_VERSION}
+    container_name: crm
+    platform: linux/amd64
+    hostname: crm
+    ports:
+      - "8092:8080"
+    networks:
+      - metanet1
+    command:
+      - /app/bin/crm
+      - -port
+      - "8080"
+
   pubsub:
     image: google/cloud-sdk:emulators
     restart: always
