feat(metabase): auto-instrumentation

--- a/.nais/prod/metabase/gcp.yaml
+++ b/.nais/prod/metabase/gcp.yaml
@@ -88,6 +88,10 @@ metadata:
   labels:
     team: nada
 spec:
+  observability: 
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   groups:
   - name: metabase-alert
     rules:
