--- a/config-local.yaml
+++ b/config-local.yaml
@@ -97,6 +97,7 @@ workstation:
   tls_secure_web_proxy_policy: secure-web-gateway-security-policy
   location: europe-north1
   clusterID: knada
+  firewall_policy_name: onprem-access
   endpoint: http://localhost:8090
   disable_auth: true
 secure_web_proxy:
@@ -104,6 +105,9 @@ secure_web_proxy:
   disable_auth: true
 cloud_resource_manager:
   endpoint: http://localhost:8092
+  disable_auth: true
+compute_engine:
+  endpoint: http://localhost:8093
   disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: test-gcp
