tests(workstation): fix tag binding client
Co-authored-by: Erik Vattekar <erik.vattekar@nav.no>

--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -92,6 +92,7 @@ workstation:
     location: europe-north1
     tls_secure_web_proxy_policy: my-secure-web-proxy-policy
     clusterID: knada
+    firewall_policy_name: onprem-access
     endpoint: http://localhost:8090
     disable_auth: true
 secure_web_proxy:
@@ -99,6 +100,9 @@ secure_web_proxy:
     disable_auth: true
 cloud_resource_manager:
     endpoint: http://localhost:8092
+    disable_auth: true
+compute_engine:
+    endpoint: http://localhost:8093
     disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
