--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -101,7 +101,7 @@ jobs:
         run: |
           if [ ${{ github.event_name }} == push ]; then
             if [ ${{ github.ref }} == 'refs/heads/main' ]; then
-              echo "deploy_env=dev-only" >> $GITHUB_OUTPUT
+              echo "deploy_env=prod-and-dev" >> $GITHUB_OUTPUT
             else
               echo "deploy_env=none" >> $GITHUB_OUTPUT
             fi
