bug(compute): need to use regional network

--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -87,6 +87,7 @@ workstation:
   workstations_project: knada-dev
   service_accounts_project: nada-dev-db2e
   tls_secure_web_proxy_policy: secure-web-gateway-security-policy
+  firewall_policy_name: onprem-access
   location: europe-north1
   clusterID: knada
 email_suffix: '@nav.no'
