--- a/config-local.yaml
+++ b/config-local.yaml
@@ -98,6 +98,8 @@ workstation:
   location: europe-north1
   clusterID: knada
   firewall_policy_name: onprem-access
+  logging_bucket: knada-swp-request-logs
+  logging_view: knada-swp-request-logs
   endpoint: http://localhost:8090
   disable_auth: true
 secure_web_proxy:
@@ -108,6 +110,9 @@ cloud_resource_manager:
   disable_auth: true
 compute_engine:
   endpoint: http://localhost:8093
+  disable_auth: true
+cloud_logging:
+  endpoint: http://localhost:8094
   disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: test-gcp
