--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -90,6 +90,8 @@ workstation:
   firewall_policy_name: onprem-access
   location: europe-north1
   clusterID: knada
+  logging_bucket: knada-swp-request-logs
+  logging_view: knada-swp-request-logs
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
