--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.13.0",
     "react-markdown": "^9.0.1",
+    "react-query": "^3.39.3",
     "react-select": "^5.8.0",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.33.5",
