--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -93,6 +93,7 @@ workstation:
   clusterID: knada
   logging_bucket: knada-swp-request-logs
   logging_view: knada-swp-request-logs
+  administrator_service_account: nada-backen-nada-23ow5ma@nais-dev-2e7b.iam.gserviceaccount.com
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
 keywords_admin_group: nada@nav.no
