--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -26,6 +26,7 @@ big_query:
 slack:
   webhook_url: # Loaded from env var NADA_SLACK_WEBHOOK_URL
   token: # Loaded from env var NADA_SLACK_TOKEN
+  dry_run: true
 server:
   hostname: localhost
   address: 127.0.0.1
