--- a/.nais/prod/nada-backend/nada-backend-config.yaml
+++ b/.nais/prod/nada-backend/nada-backend-config.yaml
@@ -95,6 +95,7 @@ data:
       logging_view: knada-swp-request-logs
       clusterID: knada
       administrator_service_account: nada-backen-nada-23ow5ma@nais-prod-020f.iam.gserviceaccount.com
+      artifact_repository_name: knast-images
     email_suffix: '@nav.no'
     keywords_admin_group: nada@nav.no
     all_users_group: group:all-users@nav.no
