--- a/config-local.yaml
+++ b/config-local.yaml
@@ -104,6 +104,7 @@ workstation:
   endpoint: http://localhost:8090
   disable_auth: true
   administrator_service_account: test@test.iam.gserviceaccount.com
+  artifact_repository_name: knast-images
 secure_web_proxy:
   endpoint: http://localhost:8091
   disable_auth: true
@@ -115,6 +116,9 @@ compute_engine:
   disable_auth: true
 cloud_logging:
   endpoint: http://localhost:8094
+  disable_auth: true
+artifact_registry:
+  endpoint: http://localhost:8095
   disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: test-gcp
