--- a/pkg/config/v2/testdata/config.yaml
+++ b/pkg/config/v2/testdata/config.yaml
@@ -31,6 +31,7 @@ big_query:
 slack:
     token: fake_token
     webhook_url: http://localhost:8080/webhook
+    dry_run: false
 server:
     hostname: localhost
     address: 127.0.0.1
@@ -95,6 +96,7 @@ workstation:
     firewall_policy_name: onprem-access
     logging_bucket: my-bucket
     logging_view: my-view
+    artifact_repository_name: knast-images
     administrator_service_account: bla@test-project.iam.gserviceaccount.com
     endpoint: http://localhost:8090
     disable_auth: true
@@ -109,6 +111,9 @@ compute_engine:
     disable_auth: true
 cloud_logging:
     endpoint: http://localhost:8094
+    disable_auth: true
+artifact_registry:
+    endpoint: http://localhost:8095
     disable_auth: true
 email_suffix: '@nav.no'
 nais_cluster_name: dev-gcp
