chore(workstations): we need to fetch from the knada-gcp project for the images

--- a/.nais/dev/nada-backend/nada-backend-config.yaml
+++ b/.nais/dev/nada-backend/nada-backend-config.yaml
@@ -96,6 +96,7 @@ data:
       administrator_service_account: nada-backen-nada-23ow5ma@nais-dev-2e7b.iam.gserviceaccount.com
       clusterID: knada
       artifact_repository_name: knast-images
+      artifact_repository_project: knada-gcp
     email_suffix: '@nav.no'
     keywords_admin_group: nada@nav.no
     all_users_group: group:all-users@nav.no
