--- a/.nais/prod/nada-backend/nada-backend-config.yaml
+++ b/.nais/prod/nada-backend/nada-backend-config.yaml
@@ -96,6 +96,7 @@ data:
       clusterID: knada
       administrator_service_account: nada-backen-nada-23ow5ma@nais-prod-020f.iam.gserviceaccount.com
       artifact_repository_name: knast-images
+      artifact_repository_project: knada-gcp
     email_suffix: '@nav.no'
     keywords_admin_group: nada@nav.no
     all_users_group: group:all-users@nav.no
