--- a/.github/workflows/build-and-deploy-frontend.yml
+++ b/.github/workflows/build-and-deploy-frontend.yml
@@ -57,7 +57,7 @@ jobs:
   deploy-prod:
     name: Deploy to prod-gcp
     runs-on: ubuntu-latest
-    needs: [build-and-push]
+    needs: [build-and-push, deploy-dev]
     if: ${{ github.actor != 'dependabot[bot]' && (inputs.deploy_env == 'prod-only' || inputs.deploy_env == 'prod-and-dev') }}
     env:
       IMAGE: ${{ needs.build.outputs.image }}
@@ -69,4 +69,3 @@ jobs:
           CLUSTER: prod-gcp
           VAR: image=${{ needs.build-and-push.outputs.image }}
           RESOURCE: frontend/.nais/prod.yaml,frontend/.nais/alert.yaml
-
