--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ hack/.ipynb_checkpoints/
 !resources/metabase/fake/fake-metabase-sa.json
 !resources/naisconsole/fake-response.json
 !resources/teamkatalogen/fake-data.json
+nada-backend
