--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@mui/material": "^6.0.1",
     "@mui/x-tree-view": "^7.15.0",
     "@navikt/aksel": "^6.16.2",
+    "@navikt/aksel-icons": "^7.5.2",
     "@navikt/ds-css": "^6.1.0",
     "@navikt/ds-css-internal": "^3.4.3",
     "@navikt/ds-icons": "^3.4.3",
