--- a/config-local-online.yaml
+++ b/config-local-online.yaml
@@ -107,4 +107,4 @@ cache_duration_seconds: 7200
 team_projects_update_delay_seconds: 10
 keep_empty_stories_for_days: 7
 debug: false
-log_level: debug
+log_level: info
