--- a/frontend/package.json
+++ b/frontend/package.json
@@ -73,6 +73,7 @@
     "postcss": "^8.4.44",
     "prettier": "^3.3.3",
     "storybook": "^8.4.2",
+    "storybook-react-context": "^0.7.0",
     "tailwindcss": "^3.4.10",
     "typescript": "5.5.4"
   },
